@@ -1,6 +1,11 @@
 Development Version
 -------------------
 
+Enhancements
+
+* Add comma_first option: When splitting list "comma first" notation
+  is used (issue141).
+
 Bug Fixes
 
 * Fix parsing of incomplete AS (issue284, by vmuriart).
